changed weather endpoint
